--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div class="search-wrapper">
         <label for="search">Sök</label>
         <input type="search" id="search" name="search">
-        <button><a href="index.html"><span class="fa-solid fa-magnifying-glass"></span></a></button>
+        <button id="search-button"><a href="index.html"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></a></button>
     </div>
     <div class="container-breadcrums">
         <nav class="breadcrums">
             <ol>
-                <li></li>
+                <li><a href=""></a></li>
                 <li></li>
             </ol>
         </nav>
