fix footer navigation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div class="search-wrapper">
         <label for="search">Sök</label>
         <input type="search" id="search" name="search">
-        <button id="search-button"><a href="index.html"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></a></button>
+        <button id="search-button"><a href="index.html"><span id="icon-search"
+                    class="fa-solid fa-magnifying-glass"></span></a></button>
     </div>
     <div class="container-breadcrums">
         <nav class="breadcrums">
@@ -49,15 +50,20 @@
     <h2 class="page-title">Solna Färdtjänst</h2>
     <main>
         <section>
-            <h2 class="h1-font">Solna färdtjänst</h2>
             <p>
-                Text här för startsida
+                Solna Färdtjänst är tjänsten för dig bokförd i Solna kommun som vill boka trygg och snabb färdtjänst.
             </p>
         </section>
+        <picture>
+            <img src="" alt="">
+        </picture>
         <section>
-            <h3 class="h2-font">Vad är färdtjänst?</h3>
-            <p>Text här</p>
-            <p>text här</p>
+            <h2 class="h2-font">Vad är färdtjänst?</h3>
+                <p>Färdtjänst är en del av kollektivtrafiken i Stockholms län. Den är till för dig som har
+                    funktionsnedsättningar och inte kan resa med kollektivtrafiken, eller har väsentliga svårigheter att
+                    resa med kollektivtrafiken.</p>
+                <p>Vill veta mer om färdtjänst, hur det fungerar eller har funderingar om vilka regler som gäller kan du
+                    läsa mer om det under <a href="fardtjanst.html">Solna Färdtjänst - Vad är färdtjänst?</a></p>
         </section>
     </main>
     <footer>
@@ -65,10 +71,10 @@
             <ul>
                 <li><a href="index.html">Startsida <span class="fa-solid fa-chevron-right"></span></a></li>
                 <li><a href="mypages.html">Mina sidor <span class="fa-solid fa-chevron-right"></span></a></li>
-                <li><a href="fardtjanst.html">Vad är färdtjänst? <span class="fa-solid fa-chevron-right"></span></a>
-                </li>
                 <li><a href="about.html">Om oss <span class="fa-solid fa-chevron-right"></span></a></li>
                 <li><a href="contact.html">Kontakt <span class="fa-solid fa-chevron-right"></span></a></li>
+                <li><a href="accessibility.html">Tillgänglighetsredogörelse <span class="fa-solid fa-chevron-right"></span></a>
+                </li>
             </ul>
         </div>
         <div class="socialmedia-links">
