settings menu tablet

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <span id="icon-menu" class="fa-solid fa-bars" aria-hidden="true"></span>
             </a>
             <div class="user">
-                <a href="mypages.html"><span id="icon-user" class="fa-solid fa-user"></span> Logga in</a>
+                <a href="logon.html"><span id="icon-user" class="fa-solid fa-user"></span> Logga in</a>
             </div>
         </div>
         <nav class="main-nav">
             <ul>
                 <li><a class="current-page" href="index.html">Startsida</a></li>
-                <li><a href="mypages.html">Mina sidor</a></li>
+                <li><a href="logon.html">Mina sidor</a></li>
                 <li><a href="fardtjanst.html">Vad är färdtjänst?</a></li>
                 <li><a href="about.html">Om oss</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
