fix center wrapper + background color

--- a/index.html
+++ b/index.html
@@ -11,80 +11,97 @@
 </head>
 
 <body>
-    <header class="main-header">
-        <h1>SOLNA FÄRDTJÄNST</h1>
-    </header>
-    <div class="wrapper-navigation">
-        <div class="top-nav">
-            <a href="javascript:void(0);" class="icon-menu" title="ikon för mobilnavigering">
-                <span id="icon-menu" class="fa-solid fa-bars" aria-hidden="true"></span>
-            </a>
-            <div class="user">
-                <a href="logon.html"><span id="icon-user" class="fa-solid fa-user"></span> Logga in</a>
+        <header>
+            <div class="main-header vertical-center">
+            <h1>SOLNA FÄRDTJÄNST</h1>
+            <div class="search-wrapper-header">
+                <label for="search" class="hidden-label">Sök</label>
+                <input class="search-input-header" type="text" id="search-header" name="search-header" placeholder="Sök">
+                <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
             </div>
+            </div>
+        </header>
+        <div class="wrapper-navigation-fullwitdh">
+            <div class="wrapper-navigation vertical-center">
+            <div class="top-nav">
+                <a href="javascript:void(0);" class="icon-menu" title="ikon för mobilnavigering">
+                    <span id="icon-menu" class="fa-solid fa-bars" aria-hidden="true"></span>
+                </a>
+                <div class="user">
+                    <a href="logon.html"><span id="icon-user" class="fa-solid fa-user"></span> Logga in</a>
+                </div>
+            </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a class="current-page" href="index.html">Startsida</a></li>
+                    <li><a href="logon.html">Mina sidor</a></li>
+                    <li><a href="fardtjanst.html">Vad är färdtjänst?</a></li>
+                    <li><a href="about.html">Om oss</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="main-nav">
-            <ul>
-                <li><a class="current-page" href="index.html">Startsida</a></li>
-                <li><a href="logon.html">Mina sidor</a></li>
-                <li><a href="fardtjanst.html">Vad är färdtjänst?</a></li>
-                <li><a href="about.html">Om oss</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="search-wrapper">
-        <label for="search">Sök</label>
-        <input type="search" id="search" name="search">
-        <button id="search-button"><a href="index.html"><span id="icon-search"
-                    class="fa-solid fa-magnifying-glass"></span></a></button>
-    </div>
-    <div class="container-breadcrums">
-        <nav class="breadcrums">
-            <ol>
-                <li><a href=""></a></li>
-                <li></li>
-            </ol>
-        </nav>
-    </div>
-    <h2 class="page-title">Solna Färdtjänst</h2>
-    <main>
-        <section>
-            <p>
-                Solna Färdtjänst är tjänsten för dig bokförd i Solna kommun som vill boka trygg och snabb färdtjänst.
-            </p>
-        </section>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <section>
-            <h2 class="h2-font">Vad är färdtjänst?</h3>
+        </div>
+        <div class="search-wrapper vertical-center">
+            <label for="search">Sök</label>
+            <input type="text" id="search" name="search">
+            <button id="search-button"><a href="index.html"><span id="icon-search"
+                        class="fa-solid fa-magnifying-glass"></span></a></button>
+        </div>
+        <div class="container-breadcrums vertical-center">
+            <nav class="breadcrums">
+                <ol>
+                    <li><a href=""></a></li>
+                    <li></li>
+                </ol>
+            </nav>
+        </div>
+        <h2 class="page-title">Solna Färdtjänst</h2>
+        <main>
+            <div class="vertical-center">
+            <section>
+                <h2></h2>
+                <p>
+                    Solna Färdtjänst är tjänsten för dig bokförd i Solna kommun som vill boka trygg och snabb
+                    färdtjänst.
+                </p>
+            </section>
+            <picture>
+                <img src="" alt="">
+            </picture>
+            <section>
+                <div class="heading"><h2 class="h2-font">Vad är färdtjänst?</h2></div>
                 <p>Färdtjänst är en del av kollektivtrafiken i Stockholms län. Den är till för dig som har
                     funktionsnedsättningar och inte kan resa med kollektivtrafiken, eller har väsentliga svårigheter att
                     resa med kollektivtrafiken.</p>
                 <p>Vill veta mer om färdtjänst, hur det fungerar eller har funderingar om vilka regler som gäller kan du
                     läsa mer om det under <a href="fardtjanst.html">Solna Färdtjänst - Vad är färdtjänst?</a></p>
-        </section>
-    </main>
-    <footer>
-        <div class="footer-links">
-            <ul>
-                <li><a href="index.html">Startsida <span class="fa-solid fa-chevron-right"></span></a></li>
-                <li><a href="mypages.html">Mina sidor <span class="fa-solid fa-chevron-right"></span></a></li>
-                <li><a href="about.html">Om oss <span class="fa-solid fa-chevron-right"></span></a></li>
-                <li><a href="contact.html">Kontakt <span class="fa-solid fa-chevron-right"></span></a></li>
-                <li><a href="accessibility.html">Tillgänglighetsredogörelse <span class="fa-solid fa-chevron-right"></span></a>
-                </li>
-            </ul>
-        </div>
-        <div class="socialmedia-links">
-            <ul>
-                <li><a href="www.instagram.com"><span class="fa-brands fa-instagram"></span></a></li>
-                <li><a href="www.facebook.com"><span class="fa-brands fa-square-facebook"></span></a></li>
-                <li><a href="www.linkedin.com"><span class="fa-brands fa-square-linkedin"></span></a></li>
-            </ul>
-        </div>
-    </footer>
+            </section>
+            </div>
+        </main>
+        <footer>
+            <div class="footer-container vertical-center">
+            <div class="footer-links">
+                <ul>
+                    <li><a href="index.html">Startsida <span class="fa-solid fa-chevron-right"></span></a></li>
+                    <li><a href="mypages.html">Mina sidor <span class="fa-solid fa-chevron-right"></span></a></li>
+                    <li><a href="about.html">Om oss <span class="fa-solid fa-chevron-right"></span></a></li>
+                    <li><a href="contact.html">Kontakt <span class="fa-solid fa-chevron-right"></span></a></li>
+                    <li><a href="accessibility.html">Tillgänglighetsredogörelse <span
+                                class="fa-solid fa-chevron-right"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="socialmedia-links">
+                <ul>
+                    <li><a href="www.instagram.com"><span class="fa-brands fa-instagram"></span></a></li>
+                    <li><a href="www.facebook.com"><span class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                </ul>
+            </div>
+            </div>
+        </footer>
+
     <!--Function for hamburgermenu mobile-->
     <script>
         document.querySelector("#icon-menu").addEventListener("click", myFunction);
