--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <main>
             <div class="vertical-center">
             <section>
-                <h2></h2>
+                <h2 class="heading-hidden">Solna Färdtjänst</h2>
                 <p>
                     Solna Färdtjänst är tjänsten för dig bokförd i Solna kommun som vill boka trygg och snabb
                     färdtjänst.
