--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 </head>
 
 <body>
-        <header>
-            <div class="main-header vertical-center">
+    <header>
+        <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
                 <label for="search" class="hidden-label">Sök</label>
-                <input class="search-input-header" type="text" id="search-header" name="search-header" placeholder="Sök">
+                <input class="search-input-header" type="text" id="search-header" name="search-header"
+                    placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
             </div>
-            </div>
-        </header>
-        <div class="wrapper-navigation-fullwitdh">
-            <div class="wrapper-navigation vertical-center">
+        </div>
+    </header>
+    <div class="wrapper-navigation-fullwitdh">
+        <div class="wrapper-navigation vertical-center">
             <div class="top-nav">
                 <a href="javascript:void(0);" class="icon-menu" title="ikon för mobilnavigering">
                     <span id="icon-menu" class="fa-solid fa-bars" aria-hidden="true"></span>
@@ -41,24 +42,24 @@
                 </ul>
             </nav>
         </div>
-        </div>
-        <div class="search-wrapper vertical-center">
-            <label for="search">Sök</label>
-            <input type="text" id="search" name="search">
-            <button id="search-button"><a href="index.html"><span id="icon-search"
-                        class="fa-solid fa-magnifying-glass"></span></a></button>
-        </div>
-        <div class="container-breadcrums vertical-center">
-            <nav class="breadcrums">
-                <ol>
-                    <li><a href=""></a></li>
-                    <li></li>
-                </ol>
-            </nav>
-        </div>
-        <h2 class="page-title">Solna Färdtjänst</h2>
-        <main>
-            <div class="vertical-center">
+    </div>
+    <div class="search-wrapper vertical-center">
+        <label for="search">Sök</label>
+        <input type="text" id="search" name="search">
+        <button id="search-button"><span id="icon-search"
+                    class="fa-solid fa-magnifying-glass"></span></button>
+    </div>
+    <div class="container-breadcrums vertical-center">
+        <nav class="breadcrums">
+            <ol>
+                <li><a href=""></a></li>
+                <li></li>
+            </ol>
+        </nav>
+    </div>
+    <h2 class="page-title">Solna Färdtjänst</h2>
+    <main>
+        <div class="vertical-center">
             <section>
                 <h2 class="heading-hidden">Solna Färdtjänst</h2>
                 <p>
@@ -70,17 +71,19 @@
                 <img src="" alt="">
             </picture>
             <section>
-                <div class="heading"><h2 class="h2-font">Vad är färdtjänst?</h2></div>
+                <div class="heading">
+                    <h2 class="h2-font">Vad är färdtjänst?</h2>
+                </div>
                 <p>Färdtjänst är en del av kollektivtrafiken i Stockholms län. Den är till för dig som har
                     funktionsnedsättningar och inte kan resa med kollektivtrafiken, eller har väsentliga svårigheter att
                     resa med kollektivtrafiken.</p>
                 <p>Vill veta mer om färdtjänst, hur det fungerar eller har funderingar om vilka regler som gäller kan du
                     läsa mer om det under <a href="fardtjanst.html">Solna Färdtjänst - Vad är färdtjänst?</a></p>
             </section>
-            </div>
-        </main>
-        <footer>
-            <div class="footer-container vertical-center">
+        </div>
+    </main>
+    <footer>
+        <div class="footer-container vertical-center">
             <div class="footer-links">
                 <ul>
                     <li><a href="index.html">Startsida <span class="fa-solid fa-chevron-right"></span></a></li>
@@ -99,8 +102,8 @@
                     <li><a href="www.linkedin.com"><span class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
-            </div>
-        </footer>
+        </div>
+    </footer>
 
     <!--Function for hamburgermenu mobile-->
     <script>
