creating accessibility statement

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
             <div class="footer-links">
                 <ul>
                     <li><a href="index.html">Startsida <span class="fa-solid fa-chevron-right"></span></a></li>
-                    <li><a href="mypages.html">Mina sidor <span class="fa-solid fa-chevron-right"></span></a></li>
+                    <li><a href="logon.html">Mina sidor <span class="fa-solid fa-chevron-right"></span></a></li>
                     <li><a href="about.html">Om oss <span class="fa-solid fa-chevron-right"></span></a></li>
                     <li><a href="contact.html">Kontakt <span class="fa-solid fa-chevron-right"></span></a></li>
                     <li><a href="accessibility.html">Tillgänglighetsredogörelse <span
