--- a/accessibility.html
+++ b/accessibility.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Logga in</title>
+    <title>Startsida - Tillgänglighetsredogörelse</title>
 </head>
 
 <body>
@@ -35,9 +35,9 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Startsida</a></li>
-                    <li><a class="current-page" href="logon.html">Mina sidor</a></li>
+                    <li><a href="logon.html">Mina sidor</a></li>
                     <li><a href="fardtjanst.html">Vad är färdtjänst?</a></li>
-                    <li><a href="about.html">Om oss</a></li>
+                    <li><a class="current-page" href="about.html">Om oss</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
                 </ul>
             </nav>
@@ -52,33 +52,59 @@
         <nav class="breadcrums">
             <ol>
                 <li><a href="index.html">Startsida</a></li>
-                <li> / Logga in</li>
+                <li> / Tillgänglighetsredogörelse</li>
             </ol>
         </nav>
     </div>
-    <h2 class="page-title">Logga in</h2>
+    <h2 class="page-title">Tillgänglighetsredogörelse</h2>
     <main>
         <div class="vertical-center">
+            <picture>
+                <img src="" alt="">
+            </picture>
             <section>
-                <h2 class="heading-hidden">Logga in</h2>
-                <div class="user-logon-form">
-                    <label for="username">Användarnamn</label>
-                    <input type="text" id="username" name="username">
-                    <label for="password">Lösenord</label>
-                    <input type="text" id="password" name="password">
-                    <button>Logga in</button>
-                    <button>Rensa</button>
-                </div>
-                <div class="heading">
-                    <h2 class="h2-font">Saknar du ett konto för inloggning?</h2>
-                </div>
-                <p>För att skapa ett konto måste du ha fått din färdtjänst ansökan beviljad av Region Stockholm.
-                    Behöver du mer information om färdtjänst och hur du ansöker finns det hos <a
-                        href="https://fardtjansten.regionstockholm.se/">Färdtjänst - Region
-                        Stockholm</a></p>
-                <p>När du har fått beviljad färdtjänst och ditt färdtjänstkort kan du enkel skapa ett konto. Se till att
-                    ha ditt färdtjänstkort tillgängligt.</p>
-                <button>Skapa Konto</button>
+                <h2>Tillgänglighet</h2>
+                <p>
+                    Solna Färdtjänst står bakom den här webbplatsen. Vi vill att så många som möjligt ska kunna använda
+                    webbplatsen. Här beskriver vi hur solnafardtjanst.se uppfyller lagen om tillgänglighet till digital
+                    offentlig service, eventuella kända tillgänglighetsproblem och hur du kan rapportera brister till
+                    oss så att vi kan åtgärda dem.
+                </p>
+                <h3>Hur tillgänglig är webbplatsen?</h3>
+                <p>
+                    Vi strävar efter att solna.se ska kunna uppfattas, hanteras och förstås av alla användare, oavsett
+                    till exempel funktionsnedsättningar och oberoende av vilka hjälpmedel de använder.
+                </p>
+                <p>
+                    Vi är medvetna om att delar av webbplatsen ännu inte är helt tillgängliga. Se avsnittet om innehåll
+                    som inte är tillgängligt nedan för mer information.
+                </p>
+                <h3>Vad kan du göra om du inte kan använda delar av webbplatsen?</h3>
+                <p>
+                    Om du behöver innehåll från solnafardtjanst.se som inte är tillgängligt för dig, använd vårt
+                    <a href="contactform.html">formulär</a> eller ring till oss: 08-123 456 789
+                </p>
+                <h3>Rapportera brister i webbplatsens tillgänglighet</h3>
+                <p>
+                    Vi strävar hela tiden efter att förbättra webbplatsens tillgänglighet. Om du upptäcker problem som
+                    inte är beskrivna på den här sidan, eller om du anser att vi inte uppfyller lagens krav, använd vårt
+                    <a href="contactform.html">formulär</a> så att vi får veta att problemet finns.
+                </p>
+                <h3>Tillsyn</h3>
+                <p>
+                    Myndigheten för digital förvaltning har ansvaret för tillsyn för lagen om tillgänglighet till
+                    digital offentlig service. Om du inte är nöjd med hur vi hanterar dina synpunkter kan du <a href="">kontakta
+                    Myndigheten för digital förvaltning</a> och påtala det.
+                </p>
+
+                <h2>Innehåll som inte är tillgängligt</h2>
+                <ul>
+                    <li>Punktlista</li>
+                    <li>Över innehåll</li>
+                    <li>Som inte är</li>
+                    <li>tillgängligt</li>
+                    <li>på denna webbplats</li>
+                </ul>
             </section>
         </div>
     </main>
