creating pages for front site

--- a/ansokfardtjanst.html
+++ b/ansokfardtjanst.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Tillgänglighetsredogörelse</title>
+    <title>Startsida - Ansök om färdtjänst</title>
 </head>
 
 <body>
@@ -52,59 +52,44 @@
         <nav class="breadcrums">
             <ol>
                 <li><a href="index.html">Startsida</a></li>
-                <li> / Tillgänglighetsredogörelse</li>
+                <li> / <a href="fardtjanst.html">Vad är färdtjänst</a></li>
+                <li> / Ansök om färdtjänst</li>
             </ol>
         </nav>
     </div>
-    <h2 class="page-title">Tillgänglighetsredogörelse</h2>
+    <h2 class="page-title">Ansök om färdtjänst</h2>
     <main>
         <div class="vertical-center">
-            <picture>
-                <img src="" alt="">
-            </picture>
             <section>
-                <h2>Tillgänglighet</h2>
+                <h2 class="heading-hidden">Att ansöka om färdtjänst</h2>
                 <p>
-                    Solna Färdtjänst står bakom den här webbplatsen. Vi vill att så många som möjligt ska kunna använda
-                    webbplatsen. Här beskriver vi hur solnafardtjanst.se uppfyller lagen om tillgänglighet till digital
-                    offentlig service, eventuella kända tillgänglighetsproblem och hur du kan rapportera brister till
-                    oss så att vi kan åtgärda dem.
+                    Här kan du läsa om hur du ansöker om färdtjänst.
                 </p>
-                <h3>Hur tillgänglig är webbplatsen?</h3>
+                <h2>Så här ansöker du</h2>
                 <p>
-                    Vi strävar efter att solna.se ska kunna uppfattas, hanteras och förstås av alla användare, oavsett
-                    till exempel funktionsnedsättningar och oberoende av vilka hjälpmedel de använder.
+                    En ansökan om tillstånd till färdtjänst sker i flera steg. Det gäller både om du ansöker för första
+                    gången och om du ansöker om att förlänga ditt tillstånd till färdtjänst.
                 </p>
                 <p>
-                    Vi är medvetna om att delar av webbplatsen ännu inte är helt tillgängliga. Se avsnittet om innehåll
-                    som inte är tillgängligt nedan för mer information.
+                <ol>
+                    <li>1. Ta kontakt med din läkare för att få ett läkarintyg för färdtjänst. Läkarintyget får inte vara
+                    äldre än 3 månader när du ansöker.</li>
+                    <li>2. Du eller läkaren skickar läkarintyget till den kommun där du är folkbokförd. Är du folkbokförd i
+                    Stockholms kommun ska läkarintyget skickas till den stadsdelsförvaltning som du tillhör.</li>
+                    <li>3. Du blir kontaktad av en färdtjänstutredare på kommunen eller stadsdelsförvaltningen som bokar ett
+                    möte med dig. I samband med mötet beskriver färdtjänstutredaren i en utredning hur din
+                    funktionsnedsättning påverkar dina möjligheter att resa med kollektivtrafiken.</li>
+                    <li>4. Du beskriver själv dina svårigheter i en ansökningsblankett som du får av färdtjänstutredaren.</li>
+                    <li>5. Ta med ett nytaget fotografi till besöket. Om du inte har något fotografi kan färdtjänstutredaren
+                    ta ett fotografi på dig vid mötet.</li>
+                    <li>6. Färdtjänstutredaren skickar läkarintyget, utredningen, din ansökan och ett fotografi till
+                    Färdtjänsten.</li>
+                    <li>7. Färdtjänsten beslutar om du får färdtjänst eller inte och skickar hem ett beslutsbrev till dig.</li>
+                </ol>
                 </p>
-                <h3>Vad kan du göra om du inte kan använda delar av webbplatsen?</h3>
                 <p>
-                    Om du behöver innehåll från solnafardtjanst.se som inte är tillgängligt för dig, använd vårt
-                    <a href="contactform.html">formulär</a> eller ring till oss: 08-123 456 789
+                    <strong>Om du fick tillstånd till färdtjänst kommer ditt personliga färdtjänstkort hem till dig med post inom en vecka. Du kan inte resa med färdtjänst innan du har fått ditt färdtjänstkort.</strong>
                 </p>
-                <h3>Rapportera brister i webbplatsens tillgänglighet</h3>
-                <p>
-                    Vi strävar hela tiden efter att förbättra webbplatsens tillgänglighet. Om du upptäcker problem som
-                    inte är beskrivna på den här sidan, eller om du anser att vi inte uppfyller lagens krav, använd vårt
-                    <a href="contactform.html">formulär</a> så att vi får veta att problemet finns.
-                </p>
-                <h3>Tillsyn</h3>
-                <p>
-                    Myndigheten för digital förvaltning har ansvaret för tillsyn för lagen om tillgänglighet till
-                    digital offentlig service. Om du inte är nöjd med hur vi hanterar dina synpunkter kan du <a href="">kontakta
-                    Myndigheten för digital förvaltning</a> och påtala det.
-                </p>
-
-                <h2>Innehåll som inte är tillgängligt</h2>
-                <ul>
-                    <li>Punktlista</li>
-                    <li>Över innehåll</li>
-                    <li>Som inte är</li>
-                    <li>tillgängligt</li>
-                    <li>på denna webbplats</li>
-                </ul>
             </section>
         </div>
     </main>
