--- a/fungerarfardtjanst.html
+++ b/fungerarfardtjanst.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Tillgänglighetsredogörelse</title>
+    <title>Startsida - Hur fungerar färdtjänst?</title>
 </head>
 
 <body>
@@ -52,59 +52,51 @@
         <nav class="breadcrums">
             <ol>
                 <li><a href="index.html">Startsida</a></li>
-                <li> / Tillgänglighetsredogörelse</li>
+                <li> / <a href="fardtjanst.html">Vad är färdtjänst</a></li>
+                <li> / Hur fungerar färdtjänst?</li>
             </ol>
         </nav>
     </div>
-    <h2 class="page-title">Tillgänglighetsredogörelse</h2>
+    <h2 class="page-title">Hur fungerar färdtjänst?</h2>
     <main>
         <div class="vertical-center">
-            <picture>
-                <img src="" alt="">
-            </picture>
             <section>
-                <h2>Tillgänglighet</h2>
+                <h2 class="heading-hidden">Hur färdtjänst fungerar</h2>
                 <p>
-                    Solna Färdtjänst står bakom den här webbplatsen. Vi vill att så många som möjligt ska kunna använda
-                    webbplatsen. Här beskriver vi hur solnafardtjanst.se uppfyller lagen om tillgänglighet till digital
-                    offentlig service, eventuella kända tillgänglighetsproblem och hur du kan rapportera brister till
-                    oss så att vi kan åtgärda dem.
+                    För att få färdtjänst behöver du ansöka om det hos din stadsdelsförvaltning. Det är färdtjänstlagen
+                    som reglerar vem som har rätt att få färdtjänst och på denna sida kan du läsa vad som krävs för att
+                    få färdtjänst i Stockholms län och vilka regler som gäller.
                 </p>
-                <h3>Hur tillgänglig är webbplatsen?</h3>
+                <h2>Vad krävs för att få färdtjänst?</h2>
                 <p>
-                    Vi strävar efter att solna.se ska kunna uppfattas, hanteras och förstås av alla användare, oavsett
-                    till exempel funktionsnedsättningar och oberoende av vilka hjälpmedel de använder.
+                    Här kan du läsa om vad som krävs för att få färdtjänst och vad som inte är tillräckliga skäl.
                 </p>
+                <h3>Vad krävs för att få tillstånd till färdtjänst?</h3>
                 <p>
-                    Vi är medvetna om att delar av webbplatsen ännu inte är helt tillgängliga. Se avsnittet om innehåll
-                    som inte är tillgängligt nedan för mer information.
-                </p>
-                <h3>Vad kan du göra om du inte kan använda delar av webbplatsen?</h3>
-                <p>
-                    Om du behöver innehåll från solnafardtjanst.se som inte är tillgängligt för dig, använd vårt
-                    <a href="contactform.html">formulär</a> eller ring till oss: 08-123 456 789
-                </p>
-                <h3>Rapportera brister i webbplatsens tillgänglighet</h3>
-                <p>
-                    Vi strävar hela tiden efter att förbättra webbplatsens tillgänglighet. Om du upptäcker problem som
-                    inte är beskrivna på den här sidan, eller om du anser att vi inte uppfyller lagens krav, använd vårt
-                    <a href="contactform.html">formulär</a> så att vi får veta att problemet finns.
-                </p>
-                <h3>Tillsyn</h3>
-                <p>
-                    Myndigheten för digital förvaltning har ansvaret för tillsyn för lagen om tillgänglighet till
-                    digital offentlig service. Om du inte är nöjd med hur vi hanterar dina synpunkter kan du <a href="">kontakta
-                    Myndigheten för digital förvaltning</a> och påtala det.
+                    För att få tillstånd till färdtjänst måste du
+                <ul>
+                    <li>vara folkbokförd i en kommun i Stockholms län,</li>
+                    <li>ha en funktionsnedsättning som varar i mer än 3 månader,</li>
+                    <li>ha stora svårigheter att förflytta dig på egen hand eller att resa med kollektivtrafiken.</li>
+                </ul>
                 </p>
 
-                <h2>Innehåll som inte är tillgängligt</h2>
-                <ul>
-                    <li>Punktlista</li>
-                    <li>Över innehåll</li>
-                    <li>Som inte är</li>
-                    <li>tillgängligt</li>
-                    <li>på denna webbplats</li>
-                </ul>
+                <h3>När kan du inte få tillstånd till färdtjänst?</h3>
+                <p>
+                    Att du har en funktionsnedsättning eller en diagnos i sig är inte tillräckligt för att få tillstånd
+                    till färdtjänst. Det är din förmåga att ta dig till eller resa med SL och Waxholmsbolaget som avgör.
+                </p>
+                <p>
+                    Du får inte färdtjänst enbart på grund av att
+                    <ul>
+                        <li>det inte finns kollektivtrafik där du bor</li>
+                    <li>kollektivtrafiken har gles trafik där du bor</li>
+                    <li>du inte längre kan köra bil</li>
+                    <li>det är svårt för dig att ta dig till en särskild plats</li>
+                    <li>du inte kan bära det du har köpt</li>
+                    <li>du behöver komma fortare fram dit du ska</li>
+                    <li>du behöver hjälp att ta dig till vård eller behandling</li>
+                </p>
             </section>
         </div>
     </main>
