--- a/avgiftfardtjanst.html
+++ b/avgiftfardtjanst.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Tillgänglighetsredogörelse</title>
+    <title>Startsida - Avgifter för färdtjänst</title>
 </head>
 
 <body>
@@ -52,59 +52,42 @@
         <nav class="breadcrums">
             <ol>
                 <li><a href="index.html">Startsida</a></li>
-                <li> / Tillgänglighetsredogörelse</li>
+                <li> / <a href="fardtjanst.html">Vad är färdtjänst</a></li>
+                <li> / Avgifter för färdtjänst</li>
             </ol>
         </nav>
     </div>
-    <h2 class="page-title">Tillgänglighetsredogörelse</h2>
+    <h2 class="page-title">Avgifter för färdtjänst</h2>
     <main>
         <div class="vertical-center">
-            <picture>
-                <img src="" alt="">
-            </picture>
             <section>
-                <h2>Tillgänglighet</h2>
+                <h2 class="heading-hidden">Färdtjänstavfigter</h2>
                 <p>
-                    Solna Färdtjänst står bakom den här webbplatsen. Vi vill att så många som möjligt ska kunna använda
-                    webbplatsen. Här beskriver vi hur solnafardtjanst.se uppfyller lagen om tillgänglighet till digital
-                    offentlig service, eventuella kända tillgänglighetsproblem och hur du kan rapportera brister till
-                    oss så att vi kan åtgärda dem.
+                    En resa med färdtjänst kostar från 86 kronor och uppåt. Avgiften sätts utifrån den planerade
+                    sträckan för resan.
                 </p>
-                <h3>Hur tillgänglig är webbplatsen?</h3>
+                <h2>Vad kostar en resa med färdtjänst?</h2>
                 <p>
-                    Vi strävar efter att solna.se ska kunna uppfattas, hanteras och förstås av alla användare, oavsett
-                    till exempel funktionsnedsättningar och oberoende av vilka hjälpmedel de använder.
-                </p>
-                <p>
-                    Vi är medvetna om att delar av webbplatsen ännu inte är helt tillgängliga. Se avsnittet om innehåll
-                    som inte är tillgängligt nedan för mer information.
-                </p>
-                <h3>Vad kan du göra om du inte kan använda delar av webbplatsen?</h3>
-                <p>
-                    Om du behöver innehåll från solnafardtjanst.se som inte är tillgängligt för dig, använd vårt
-                    <a href="contactform.html">formulär</a> eller ring till oss: 08-123 456 789
-                </p>
-                <h3>Rapportera brister i webbplatsens tillgänglighet</h3>
-                <p>
-                    Vi strävar hela tiden efter att förbättra webbplatsens tillgänglighet. Om du upptäcker problem som
-                    inte är beskrivna på den här sidan, eller om du anser att vi inte uppfyller lagens krav, använd vårt
-                    <a href="contactform.html">formulär</a> så att vi får veta att problemet finns.
-                </p>
-                <h3>Tillsyn</h3>
-                <p>
-                    Myndigheten för digital förvaltning har ansvaret för tillsyn för lagen om tillgänglighet till
-                    digital offentlig service. Om du inte är nöjd med hur vi hanterar dina synpunkter kan du <a href="">kontakta
-                    Myndigheten för digital förvaltning</a> och påtala det.
-                </p>
-
-                <h2>Innehåll som inte är tillgängligt</h2>
+                    En resa med färdtjänst som är kortare än 3 mil kostar 86 kronor. Om resan är längre än 3 mil
+                    tillkommer 86 kronor för varje påbörjad tremilssträcka. Dessa avgifter får du på faktura. Du betalar
+                    för den planerade sträckan och inte för den sträcka som föraren kör.</p>
                 <ul>
-                    <li>Punktlista</li>
-                    <li>Över innehåll</li>
-                    <li>Som inte är</li>
-                    <li>tillgängligt</li>
-                    <li>på denna webbplats</li>
-                </ul>
+                    <li>0–3 mil = 86 kronor</li>
+                    <li>3–6 mil = 172 kronor</li>
+                    <li>6–9 mil = 258 kronor</li>
+                    <p>
+                        Du betalar för varje resa du gör upp till ditt högkostnadsskydd.
+                    </p>
+
+                    <h2>Avgift för att ta med en medresenär</h2>
+                    <p>
+                        Du som inte har tillstånd till ledsagare kan ta med dig en medresenär istället. Det kostar 40
+                        kronor extra per resa och den avgiften kommer på din faktura.</p>
+                    <p>
+                        Dessa avgifter ingår inte i ditt högkostnadsskydd för dina resor. Det finns ett eget
+                        högkostnadsskydd för medresenärsavgifterna. Det innebär att du betalar som mest 970 kronor eller
+                        650 kronor per faktura för medresenärsavgifterna.
+                    </p>
             </section>
         </div>
     </main>
