--- a/resafardtjanst.html
+++ b/resafardtjanst.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Tillgänglighetsredogörelse</title>
+    <title>Startsida - Olika sätt att resa</title>
 </head>
 
 <body>
@@ -52,59 +52,51 @@
         <nav class="breadcrums">
             <ol>
                 <li><a href="index.html">Startsida</a></li>
-                <li> / Tillgänglighetsredogörelse</li>
+                <li> / <a href="fardtjanst.html">Vad är färdtjänst</a></li>
+                <li> / Olika sätt att resa</li>
             </ol>
         </nav>
     </div>
-    <h2 class="page-title">Tillgänglighetsredogörelse</h2>
+    <h2 class="page-title">Olika sätt att resa</h2>
     <main>
         <div class="vertical-center">
-            <picture>
-                <img src="" alt="">
-            </picture>
             <section>
-                <h2>Tillgänglighet</h2>
+                <h2 class="heading-hidden">Såhär reser du med färdtjänst</h2>
                 <p>
-                    Solna Färdtjänst står bakom den här webbplatsen. Vi vill att så många som möjligt ska kunna använda
-                    webbplatsen. Här beskriver vi hur solnafardtjanst.se uppfyller lagen om tillgänglighet till digital
-                    offentlig service, eventuella kända tillgänglighetsproblem och hur du kan rapportera brister till
-                    oss så att vi kan åtgärda dem.
+                    Ditt tillstånd till färdtjänst gäller för ett eller flera olika färdsätt: taxi, rullstolstaxi eller
+                    bårtaxi. Vilket tillstånd till färdtjänst du har framgår av det beslutsbrev som du har fått från
+                    Färdtjänsten.
                 </p>
-                <h3>Hur tillgänglig är webbplatsen?</h3>
+                <h2>Färdsätt</h2>
                 <p>
-                    Vi strävar efter att solna.se ska kunna uppfattas, hanteras och förstås av alla användare, oavsett
-                    till exempel funktionsnedsättningar och oberoende av vilka hjälpmedel de använder.
+                    Ditt tillstånd till färdtjänst gäller för antingen färdtjänst med taxi, rullstolstaxi eller bårtaxi.
+                </p>
+                <h3>Färdtjänst med taxi</h3>
+                <p>
+                    Om du har tillstånd för färdtjänsttaxi reser du med en vanlig taxi som också kör för Färdtjänsten.
                 </p>
                 <p>
-                    Vi är medvetna om att delar av webbplatsen ännu inte är helt tillgängliga. Se avsnittet om innehåll
-                    som inte är tillgängligt nedan för mer information.
-                </p>
-                <h3>Vad kan du göra om du inte kan använda delar av webbplatsen?</h3>
-                <p>
-                    Om du behöver innehåll från solnafardtjanst.se som inte är tillgängligt för dig, använd vårt
-                    <a href="contactform.html">formulär</a> eller ring till oss: 08-123 456 789
-                </p>
-                <h3>Rapportera brister i webbplatsens tillgänglighet</h3>
-                <p>
-                    Vi strävar hela tiden efter att förbättra webbplatsens tillgänglighet. Om du upptäcker problem som
-                    inte är beskrivna på den här sidan, eller om du anser att vi inte uppfyller lagens krav, använd vårt
-                    <a href="contactform.html">formulär</a> så att vi får veta att problemet finns.
-                </p>
-                <h3>Tillsyn</h3>
-                <p>
-                    Myndigheten för digital förvaltning har ansvaret för tillsyn för lagen om tillgänglighet till
-                    digital offentlig service. Om du inte är nöjd med hur vi hanterar dina synpunkter kan du <a href="">kontakta
-                    Myndigheten för digital förvaltning</a> och påtala det.
+                    Du kan se att en taxi kör färdtjänst genom att den har Färdtjänstens märke på rutan. Du kan ta med
+                    dig ett handbagage och ett förflyttningshjälpmedel som käpp, rullator eller hopfällbar rullstol.
                 </p>
 
-                <h2>Innehåll som inte är tillgängligt</h2>
-                <ul>
-                    <li>Punktlista</li>
-                    <li>Över innehåll</li>
-                    <li>Som inte är</li>
-                    <li>tillgängligt</li>
-                    <li>på denna webbplats</li>
-                </ul>
+                <h3>Rullstolstaxi</h3>
+                <p>
+                    Att du har en funktionsnedsättning eller en diagnos i sig är inte tillräckligt för att få tillstånd
+                    En rullstolstaxi är en större bil som har plats för till exempel rullstolar och elrullstolar. Du kan
+                    beställa extra hjälp när du reser med rullstolstaxi, till exempel för att kunna ta dig ner för
+                    trappor.</p>
+                <p>
+                    Förutom rullstolen får du ta med dig ett handbagage.
+                </p>
+                <h3>Bårtaxi</h3>
+                <p>
+                    Bårtaxi är en större bil för dig som behöver ligga ner under resan. Du måste ha tillstånd för att få
+                    resa med bårtaxi.</p>
+                <p>
+                    Bårtaxin är utrustad med en särskilt anpassad bår med madrass så att du kan ligga ner och resa så
+                    bekvämt som möjligt.
+                </p>
             </section>
         </div>
     </main>
