fixed wrong title and created logged in page

--- a/logon.html
+++ b/logon.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Logga in</title>
+    <title>Logga in - Solna färdtjänst</title>
 </head>
 
 <body>
@@ -66,8 +66,12 @@
                     <input type="text" id="username" name="username">
                     <label for="password">Lösenord</label>
                     <input type="text" id="password" name="password">
-                    <button>Logga in</button>
-                    <button>Rensa</button>
+                    <div class="user-logon">
+                        <button><a href="mypages.html">Logga in</a></button>
+                    </div>
+                    <div class="user-logon">
+                        <button><a href="logon.html">Rensa</a></button>
+                    </div>
                 </div>
                 <div class="heading">
                     <h2 class="h2-font">Saknar du ett konto för inloggning?</h2>
