--- a/reglerfardtjanst.html
+++ b/reglerfardtjanst.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Regler färdtjänstresor</title>
+    <title>Regler färdtjänstresor - Solna färdtjänst</title>
 </head>
 
 <body>
