--- a/resafardtjanst.html
+++ b/resafardtjanst.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
-    <title>Startsida - Olika sätt att resa</title>
+    <title>Olika sätt att resa - Solna färdtjänst</title>
 </head>
 
 <body>
