--- a/accessibility.html
+++ b/accessibility.html
@@ -15,7 +15,7 @@
         <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
-                <label for="search" class="hidden-label">Sök</label>
+                <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
                     placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
@@ -93,8 +93,9 @@
                 <h3>Tillsyn</h3>
                 <p>
                     Myndigheten för digital förvaltning har ansvaret för tillsyn för lagen om tillgänglighet till
-                    digital offentlig service. Om du inte är nöjd med hur vi hanterar dina synpunkter kan du <a href="">kontakta
-                    Myndigheten för digital förvaltning</a> och påtala det.
+                    digital offentlig service. Om du inte är nöjd med hur vi hanterar dina synpunkter kan du <a
+                        href="">kontakta
+                        Myndigheten för digital förvaltning</a> och påtala det.
                 </p>
 
                 <h2>Innehåll som inte är tillgängligt</h2>
