--- a/bokaaterkommande.html
+++ b/bokaaterkommande.html
@@ -15,7 +15,7 @@
         <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
-                <label for="search" class="hidden-label">Sök</label>
+                <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
                     placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
@@ -138,8 +138,7 @@
                 </div>
                 <div class="form-trip-date">
                     <label for="trip-date">Slutdatum:</label><br>
-                    <input type="date" id="trip-date" name="trip-date"
-                        placeholder="Välj slutdatum">
+                    <input type="date" id="trip-date" name="trip-date" placeholder="Välj slutdatum">
                     <span class="fa-solid fa-calendar-days"></span>
                 </div>
                 <div class="form-trip-fellowtraveller">
