--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
-                <label for="search" class="hidden-label">Sök</label>
+                <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
                     placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
@@ -71,7 +71,8 @@
                 <button><a href="tel:08-1234567"><span class="fa-solid fa-phone"></span></a>Ring oss</button>
             </div>
             <div class="container-email-button">
-                <button><a href="mailto:hali2507@student.miun.se"><span class="fa-solid fa-envelope"></span></a>Maila oss</button>
+                <button><a href="mailto:hali2507@student.miun.se"><span class="fa-solid fa-envelope"></span></a>Maila
+                    oss</button>
             </div>
         </div>
     </main>
