--- a/fungerarfardtjanst.html
+++ b/fungerarfardtjanst.html
@@ -15,7 +15,7 @@
         <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
-                <label for="search" class="hidden-label">Sök</label>
+                <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
                     placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
@@ -88,15 +88,15 @@
                 </p>
                 <p>
                     Du får inte färdtjänst enbart på grund av att
-                    <ul>
-                        <li>det inte finns kollektivtrafik där du bor</li>
+                <ul>
+                    <li>det inte finns kollektivtrafik där du bor</li>
                     <li>kollektivtrafiken har gles trafik där du bor</li>
                     <li>du inte längre kan köra bil</li>
                     <li>det är svårt för dig att ta dig till en särskild plats</li>
                     <li>du inte kan bära det du har köpt</li>
                     <li>du behöver komma fortare fram dit du ska</li>
                     <li>du behöver hjälp att ta dig till vård eller behandling</li>
-                </p>
+                    </p>
             </section>
         </div>
     </main>
