--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
-                <label for="search" class="hidden-label">Sök</label>
+                <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
                     placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
@@ -46,8 +46,7 @@
     <div class="search-wrapper vertical-center">
         <label for="search">Sök</label>
         <input type="text" id="search" name="search">
-        <button id="search-button"><span id="icon-search"
-                    class="fa-solid fa-magnifying-glass"></span></button>
+        <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
     </div>
     <div class="container-breadcrums vertical-center">
         <nav class="breadcrums">
