--- a/ansokfardtjanst.html
+++ b/ansokfardtjanst.html
@@ -15,7 +15,7 @@
         <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
-                <label for="search" class="hidden-label">Sök</label>
+                <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
                     placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
@@ -72,23 +72,31 @@
                 </p>
                 <p>
                 <ol>
-                    <li>1. Ta kontakt med din läkare för att få ett läkarintyg för färdtjänst. Läkarintyget får inte vara
-                    äldre än 3 månader när du ansöker.</li>
-                    <li>2. Du eller läkaren skickar läkarintyget till den kommun där du är folkbokförd. Är du folkbokförd i
-                    Stockholms kommun ska läkarintyget skickas till den stadsdelsförvaltning som du tillhör.</li>
-                    <li>3. Du blir kontaktad av en färdtjänstutredare på kommunen eller stadsdelsförvaltningen som bokar ett
-                    möte med dig. I samband med mötet beskriver färdtjänstutredaren i en utredning hur din
-                    funktionsnedsättning påverkar dina möjligheter att resa med kollektivtrafiken.</li>
-                    <li>4. Du beskriver själv dina svårigheter i en ansökningsblankett som du får av färdtjänstutredaren.</li>
-                    <li>5. Ta med ett nytaget fotografi till besöket. Om du inte har något fotografi kan färdtjänstutredaren
-                    ta ett fotografi på dig vid mötet.</li>
+                    <li>1. Ta kontakt med din läkare för att få ett läkarintyg för färdtjänst. Läkarintyget får inte
+                        vara
+                        äldre än 3 månader när du ansöker.</li>
+                    <li>2. Du eller läkaren skickar läkarintyget till den kommun där du är folkbokförd. Är du
+                        folkbokförd i
+                        Stockholms kommun ska läkarintyget skickas till den stadsdelsförvaltning som du tillhör.</li>
+                    <li>3. Du blir kontaktad av en färdtjänstutredare på kommunen eller stadsdelsförvaltningen som bokar
+                        ett
+                        möte med dig. I samband med mötet beskriver färdtjänstutredaren i en utredning hur din
+                        funktionsnedsättning påverkar dina möjligheter att resa med kollektivtrafiken.</li>
+                    <li>4. Du beskriver själv dina svårigheter i en ansökningsblankett som du får av
+                        färdtjänstutredaren.</li>
+                    <li>5. Ta med ett nytaget fotografi till besöket. Om du inte har något fotografi kan
+                        färdtjänstutredaren
+                        ta ett fotografi på dig vid mötet.</li>
                     <li>6. Färdtjänstutredaren skickar läkarintyget, utredningen, din ansökan och ett fotografi till
-                    Färdtjänsten.</li>
-                    <li>7. Färdtjänsten beslutar om du får färdtjänst eller inte och skickar hem ett beslutsbrev till dig.</li>
+                        Färdtjänsten.</li>
+                    <li>7. Färdtjänsten beslutar om du får färdtjänst eller inte och skickar hem ett beslutsbrev till
+                        dig.</li>
                 </ol>
                 </p>
                 <p>
-                    <strong>Om du fick tillstånd till färdtjänst kommer ditt personliga färdtjänstkort hem till dig med post inom en vecka. Du kan inte resa med färdtjänst innan du har fått ditt färdtjänstkort.</strong>
+                    <strong>Om du fick tillstånd till färdtjänst kommer ditt personliga färdtjänstkort hem till dig med
+                        post inom en vecka. Du kan inte resa med färdtjänst innan du har fått ditt
+                        färdtjänstkort.</strong>
                 </p>
             </section>
         </div>
