--- a/confirmedbokaresa.html
+++ b/confirmedbokaresa.html
@@ -15,7 +15,7 @@
         <div class="main-header vertical-center">
             <h1>SOLNA FÄRDTJÄNST</h1>
             <div class="search-wrapper-header">
-                <label for="search" class="hidden-label">Sök</label>
+                <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
                     placeholder="Sök">
                 <span class="fa-solid fa-magnifying-glass icon-search-header"></span>
