adding title to socialmedia

--- a/accessibility.html
+++ b/accessibility.html
@@ -124,9 +124,9 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
+                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
